# ns-hotopic

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
cron/: ns-hotopic.example
src/ns_hotopic/: cli.py  config.py  crawler.py  hot_topics.py  models.py  parser.py  retention.py  service.py  storage.py  telegram_bot.py  topic_filters.py
tests/: test_bot_logic.py  test_config.py  test_crawler.py  test_hot_topics.py  test_parser.py  test_retention.py  test_service.py  test_storage.py
tests/fixtures/: homepage.html
